@@ -1,1 +1,2 @@
-java -classpath bin:lib/\*:. armitage.ArmitageMain $*
+java -Djavax.net.ssl.keyStore=./armitage.store -Djavax.net.ssl.keyStorePassword=123456 -classpath bin:lib/\*:. armitage.ArmitageMain $*
+#java -classpath bin:lib/\*:. armitage.ArmitageMain $*
