@@ -1,0 +1,5 @@
+package ssl;
+
+public interface ArmitageTrustListener {
+	public boolean trust(String fingerprint);
+}
